--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,13 +27,10 @@ jobs:  # workflow中的job
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v3  # 抽取项目信息，主要是镜像的tag
-        with:
-          images: nriet/openjdk
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v2 # docker build & push
         with:
-          context: .
+          context: 8/jdk/centos/.
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: nriet/openjdk:centos7.9.2009
