--- a/8/jdk/centos/Dockerfile
+++ b/8/jdk/centos/Dockerfile
@@ -2,10 +2,17 @@ FROM centos:centos7.9.2009
 
 MAINTAINER Axiu <itzyx@vip.qq.com>
 
-RUN yum update \
-    && yum install -y net-tools.x86_64 java-1.8.0-openjdk java-1.8.0-openjdk-devel.x86_64 kde-l10n-Chinese libgeos-dev &&\
+RUN yum install -y net-tools.x86_64 java-1.8.0-openjdk java-1.8.0-openjdk-devel.x86_64 kde-l10n-Chinese &&\
                    yum clean all && \
                    rm -rf /var/cache/yum
+
+
+RUN yum install https://download1.rpmfusion.org/free/el/rpmfusion-free-release-7.noarch.rpm &&\
+                   yum install -y geos-devel && \
+                   yum clean all && \
+                   rm -rf /var/cache/yum
+
+
 
 # Set environment variables.
 ENV HOME /root
