--- a/8/jdk/centos/Dockerfile
+++ b/8/jdk/centos/Dockerfile
@@ -7,11 +7,9 @@ RUN yum install -y net-tools.x86_64 java-1.8.0-openjdk java-1.8.0-openjdk-devel.
                    rm -rf /var/cache/yum
 
 
-RUN yum install -y https://download1.rpmfusion.org/free/el/rpmfusion-free-release-7.noarch.rpm geos-devel &&\
-                   yum clean all && \
-                   rm -rf /var/cache/yum
-
-
+# RUN yum install -y https://download1.rpmfusion.org/free/el/rpmfusion-free-release-7.noarch.rpm geos-devel &&\
+#                    yum clean all && \
+#                    rm -rf /var/cache/yum
 
 # Set environment variables.
 ENV HOME /root
