--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -33,10 +33,7 @@ jobs:  # workflow中的job
       - name: Build and push Docker image
         uses: docker/build-push-action@v2 # docker build & push
         with:
-          platforms: |
-            linux/386
-            linux/amd64
-            linux/arm64
+          platforms: linux/arm64
           context: 8/jdk/centos/.
           push: true
           tags: nriet/openjdk:8-jdk-centos7.9.2009
