--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,6 +1,9 @@
 # docker-image.yml
 name: Publish Docker image   # workflow名称，可以在Github项目主页的【Actions】中看到所有的workflow
-
+env:
+  APP_NAME: openjdk
+  DOCKERHUB_REPO: nriet/openjdk
+  APP_VERSION: 8-jdk-centos7.9.2009
 on:   # 配置触发workflow的事件
   push:
     branches:   # master分支有push时触发此workflow
@@ -8,32 +11,40 @@ on:   # 配置触发workflow的事件
     tags:       # tag更新时触发此workflow
       - '*'
 
-jobs:  # workflow中的job
-
-  push_to_registry:  # job的名字
-    name: Push Docker image to Docker Hub
-    runs-on: ubuntu-latest   # job运行的基础环境
-
-    steps:  # 一个job由一个或多个step组成
-      - name: Check out the repo
-        uses: actions/checkout@v2   # 官方的action，获取代码
-
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v1  # 三方的action操作， 执行docker login
+jobs:
+  docker:
+    runs-on: ubuntu-latest
+    steps:
+      -
+        name: Checkout
+        uses: actions/checkout@v2
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      -
+        name: Login to DockerHub
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_HUB_USER }}  # 配置dockerhub的认证，在Github项目主页 【Settings】 -> 【Secrets】 添加对应变量
           password: ${{ secrets.DOCKER_HUB_TOKEN }}
-
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@v3  # 抽取项目信息，主要是镜像的tag
+      # - 
+        # name: Generate App Version
+        # run: echo APP_VERSION=`git describe --tags --always` >> $GITHUB_ENV
+      -
+        name: Build and push
+        uses: docker/build-push-action@v2
         with:
-          images: nriet/openjdk
-        
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v2 # docker build & push
-        with:
-          platforms: linux/arm64
           context: 8/jdk/centos/.
+          platforms: |
+            linux/amd64
+            linux/arm64
           push: true
-          tags: nriet/openjdk:8-jdk-centos7.9.2009
+          build-args: |
+            APP_NAME=${{ env.APP_NAME }}
+            APP_VERSION=${{ env.APP_VERSION }}
+          tags: |
+            ${{ env.DOCKERHUB_REPO }}:latest
+            ${{ env.DOCKERHUB_REPO }}:${{ env.APP_VERSION }}          
