--- a/8/jdk/centos/Dockerfile
+++ b/8/jdk/centos/Dockerfile
@@ -2,9 +2,10 @@ FROM centos:centos7.9.2009
 
 MAINTAINER Axiu <itzyx@vip.qq.com>
 
-RUN yum install -y yum-utils && \
-    yum clean all && \
-    rm -rf /var/cache/yum
+RUN sed -i s/mirror.centos.org/vault.centos.org/g /etc/yum.repos.d/*.repo & \
+    yum install -y net-tools.x86_64 java-1.8.0-openjdk java-1.8.0-openjdk-devel.x86_64 kde-l10n-Chinese && \
+                   yum clean all && \
+                   rm -rf /var/cache/yum
 
 
 # RUN yum install -y https://download1.rpmfusion.org/free/el/rpmfusion-free-release-7.noarch.rpm geos-devel &&\
