--- a/8/jdk/centos/Dockerfile
+++ b/8/jdk/centos/Dockerfile
@@ -6,15 +6,15 @@ RUN mv /etc/yum.repos.d/CentOS-Base.repo /etc/yum.repos.d/CentOS-Base.repo.backu
     curl -o /etc/yum.repos.d/CentOS-Base.repo http://mirrors.aliyun.com/repo/Centos-7.repo && \
     yum clean all && \
     yum makecache
-    
-RUN yum install -y net-tools.x86_64 java-1.8.0-openjdk java-1.8.0-openjdk-devel.x86_64 kde-l10n-Chinese &&\
+
+RUN yum install -y net-tools java-1.8.0-openjdk java-1.8.0-openjdk-devel kde-l10n-Chinese &&\
                    yum clean all && \
                    rm -rf /var/cache/yum
 
 
-# RUN yum install -y https://download1.rpmfusion.org/free/el/rpmfusion-free-release-7.noarch.rpm geos-devel &&\
-#                    yum clean all && \
-#                    rm -rf /var/cache/yum
+RUN yum install -y https://download1.rpmfusion.org/free/el/rpmfusion-free-release-7.noarch.rpm geos-devel &&\
+                   yum clean all && \
+                   rm -rf /var/cache/yum
 
 # Set environment variables.
 ENV HOME /root
